--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Oluwole Akindiya's Business Card</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,7 +26,23 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <h1>Oluwole Akindiya</h1>
+  <style>
+      body{
+        background-color : #262338;
+        text-align: center;
+      }
+    </style>
+   <h2> Information About Me</h2>
+      <img src = "https://media-exp1.licdn.com/dms/image/C4E03AQG_7jBONtuerg/profile-displayphoto-shrink_200_200/0/1662228456946?e=1671062400&v=beta&t=WZPYq4JwKEme0qzd3dbqk29JFnaDvrE_dWMfhBbrR48">
+      </a>
+    <p style = "intro"> Full Name: Oluwole Ibukunoluwa Akinola Akindiya ,<p><a href= "https://oluakins17@hotmail.co.uk" target_"blank">Email: oluakins17@hotmail.co.uk</a></p>
+  <p>Work Address: 309 Tarling Street, SE12 4HR</p>
+  <p>Social Media:</p>
+  <p><a href= "https://facebook.com/oluakins290">Facebook: oluakins290</a>
+    <p><a href= "https://instagram.com/oluakins123">Instagram: oluakins123</a>
+      <p><a href= "https://linkedin.com/oluwoleakindiya">LinkedIn: Oluwole Akindiya</a>
+       <p><a href= "https://snapchat.com/oluakins49">Snapchat: oluakins49</a>
   <script src="js/vendor/modernizr-3.12.0.min.js"></script>
   <script src="js/app.js"></script>
 
